// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outline(props) renders expected snapshots 1`] = `
Object {
  "outlineColor": undefined,
  "outlineOffset": undefined,
  "outlineStyle": undefined,
  "outlineWidth": undefined,
}
`;

exports[`outline(props) renders expected snapshots 2`] = `
Object {
  "outlineColor": undefined,
  "outlineOffset": undefined,
  "outlineStyle": undefined,
  "outlineWidth": "thick",
}
`;
